--- a/app/src/main/res/layout/activity_guest.xml
+++ b/app/src/main/res/layout/activity_guest.xml
@@ -36,14 +36,12 @@
                         android:id="@+id/club_aump"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginLeft="10dp"
                         android:text="@string/amihome"
                         android:textColor="@color/navyblue"
                         android:textSize="20sp"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toEndOf="@+id/imageView2"
+                        app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <ImageView
@@ -69,7 +67,7 @@
         <GridLayout
 
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:columnCount="2"
             android:gravity="center"
             android:padding="14dp">
@@ -133,12 +131,13 @@
                         android:layout_height="80dp"
                         android:layout_gravity="center_horizontal"
                         android:contentDescription="@string/gallery"
-                        android:src="@drawable/h_contact_hierarchy" />
+                        app:srcCompat="@drawable/speech" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/leadership"
+
                         android:textColor="@android:color/black"
                         android:textSize="15sp"
                         android:textStyle="bold" />
@@ -148,19 +147,54 @@
 
             </androidx.cardview.widget.CardView>
 
-
         </GridLayout>
 
-        <Button
-            android:id="@+id/campustour"
+
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/tour"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="@drawable/button"
-            android:text="@string/tour"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="16sp" />
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginBottom="30dp"
+            app:cardCornerRadius="20dp"
+            android:layout_gravity="center">
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:layout_margin="16dp"
+                android:orientation="vertical"
+                tools:ignore="UseCompoundDrawables"
+                >
+
+                <ImageView
+                    android:id="@+id/campustour"
+                    android:layout_width="fill_parent"
+                    android:layout_height="120dp"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/tour"
+                    app:srcCompat="@drawable/build"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:background="@drawable/bg_btn"
+                    android:gravity="center"
+                    android:text="@string/tour"
+                    android:textColor="@android:color/white"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+
+
+        </androidx.cardview.widget.CardView>
+
+
 
     </LinearLayout>
     <com.google.android.material.navigation.NavigationView
