--- a/app/src/main/res/layout/activity_score_card.xml
+++ b/app/src/main/res/layout/activity_score_card.xml
@@ -16,66 +16,49 @@
         <LinearLayout
             android:id="@+id/linearLayout2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="80dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            android:background="@color/yellow"
+            android:padding="15dp"
+            >
 
             <TextView
-                android:layout_width="120dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="Department"
+                android:textColor="@color/black"
                 android:layout_gravity="center"
-                android:layout_marginEnd="03dp"
-                android:layout_marginRight="03dp"
-                android:background="@color/yellow"
-                android:padding="30dp"
-                android:paddingBottom="40sp"
-                android:text="@string/Block"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
-
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginEnd="05dp"
-                android:layout_marginRight="10dp"
-                android:background="@color/yellow"
                 android:contentDescription="@string/gold"
-                android:padding="10dp"
-                android:src="@drawable/gold" />
+                app:srcCompat="@drawable/gold" />
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginEnd="05dp"
-                android:layout_marginRight="10dp"
-                android:background="@color/yellow"
                 android:contentDescription="@string/silver"
-                android:padding="10dp"
                 android:src="@drawable/silver" />
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginEnd="03dp"
-                android:layout_marginRight="10dp"
-                android:background="@color/yellow"
                 android:contentDescription="@string/bronz"
-                android:padding="10dp"
-                android:src="@drawable/bronz" />
+                android:src="@drawable/bronze" />
 
 
             <TextView
-                android:layout_width="120dp"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginEnd="30dp"
-                android:layout_marginRight="20dp"
-                android:background="@color/yellow"
-                android:padding="30dp"
-                android:paddingBottom="40dp"
-                android:text="@string/Score"
+                android:gravity="center_horizontal"
+                android:textColor="@color/black"
+                android:text="Score"
                 android:textSize="20sp"
                 android:textStyle="bold" />
         </LinearLayout>
@@ -85,6 +68,7 @@
             android:id="@+id/scoreCard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="30dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
