--- a/app/src/main/res/layout/recycler_score.xml
+++ b/app/src/main/res/layout/recycler_score.xml
@@ -1,36 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <LinearLayout
-
     xmlns:android="http://schemas.android.com/apk/res/android"
-
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
+    android:layout_height="wrap_content"
+    >
 
     <androidx.cardview.widget.CardView
         android:id="@+id/scoreCardView"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp">
+            >
 
             <TextView
                 android:id="@+id/DepartementName"
                 android:layout_width="80dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:layout_marginHorizontal="05dp"
+                android:layout_marginHorizontal="60dp"
                 android:text="@string/ABS"
-                android:textAlignment="center"
                 android:textColor="@color/colorAccent"
-                android:textSize="25sp"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -39,43 +33,42 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:layout_marginLeft="24dp"
+                android:layout_margin="25dp"
+                android:padding="10dp"
+                android:layout_gravity="center"
+                android:gravity="center"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/score"
                 app:layout_constraintStart_toEndOf="@+id/DepartementName"
                 app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
                     android:id="@+id/gold"
                     android:layout_width="40dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="15dp"
-                    android:layout_marginRight="15dp"
-                    android:gravity="center_horizontal"
+                    android:layout_height="match_parent"
                     android:maxLength="2"
-                    android:text=""
-                    android:textAlignment="center"
+                    android:text="10"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/silver"
-                    android:layout_width="34dp"
+                    android:layout_width="40dp"
                     android:layout_height="match_parent"
-                    android:layout_marginEnd="15dp"
-                    android:layout_marginRight="15dp"
                     android:maxLength="2"
-                    android:text=""
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginStart="20dp"
+                    android:text="10"
                     android:textSize="20sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:layout_marginRight="20dp" />
 
                 <TextView
                     android:id="@+id/bronze"
                     android:layout_width="40dp"
                     android:layout_height="match_parent"
-                    android:layout_marginEnd="15dp"
-                    android:layout_marginRight="15dp"
                     android:maxLength="2"
-                    android:text=""
+                    android:text="10"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
@@ -84,15 +77,16 @@
 
             <TextView
                 android:id="@+id/score"
-                android:layout_width="40dp"
+                android:layout_width="50dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="24dp"
-                android:layout_marginRight="24dp"
-                android:text=""
+                android:layout_marginRight="10dp"
+                android:layout_marginHorizontal="30dp"
+
+                android:text="555"
                 android:textColor="@color/colorPrimaryDark"
-                android:textSize="15sp"
+                android:textSize="22sp"
                 android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
