--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,5 @@
     <color name="wafer">#abb9ff </color>
     <color name="icepack"> #c7ecee</color>
     <color name="grey">#D3D3D3</color>
-    <color name="yellow">#CCCC00</color>
+    <color name="yellow">#FFDE39</color>
 </resources>
