--- a/app/src/main/res/layout/activity_guest.xml
+++ b/app/src/main/res/layout/activity_guest.xml
@@ -82,7 +82,7 @@
         <GridLayout
 
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:columnCount="2"
             android:gravity="center"
             android:padding="14dp">
@@ -90,10 +90,10 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="130dp"
                 android:layout_height="130dp"
-                app:cardCornerRadius="20dp"
-                android:layout_marginRight="30dp"
                 android:layout_marginLeft="30dp"
-                android:layout_marginBottom="30dp">
+                android:layout_marginRight="30dp"
+                android:layout_marginBottom="30dp"
+                app:cardCornerRadius="20dp">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -127,10 +127,10 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="130dp"
                 android:layout_height="130dp"
-                app:cardCornerRadius="20dp"
-                android:layout_marginRight="30dp"
                 android:layout_marginLeft="30dp"
-                android:layout_marginBottom="30dp">
+                android:layout_marginRight="30dp"
+                android:layout_marginBottom="30dp"
+                app:cardCornerRadius="20dp">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -161,19 +161,54 @@
 
             </androidx.cardview.widget.CardView>
 
-
         </GridLayout>
 
-        <Button
-            android:id="@+id/campustour"
+
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/tour"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/button"
-            android:layout_gravity="center"
-            android:text="@string/tour"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="16sp" />
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginBottom="30dp"
+            app:cardCornerRadius="20dp"
+            android:layout_gravity="center">
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:layout_margin="16dp"
+                android:orientation="vertical"
+                tools:ignore="UseCompoundDrawables"
+                >
+
+                <ImageView
+                    android:id="@+id/campustour"
+                    android:layout_width="fill_parent"
+                    android:layout_height="120dp"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/tour"
+                    app:srcCompat="@drawable/build"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:background="@drawable/bg_btn"
+                    android:gravity="center"
+                    android:text="@string/tour"
+                    android:textColor="@android:color/white"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+
+
+        </androidx.cardview.widget.CardView>
+
+
 
     </LinearLayout>
     <com.google.android.material.navigation.NavigationView
